    is what users normally see).
  * Move steam-devices Recommends into sorted order
  * Add Depends on file, used by the Steam Runtime setup scripts
  * Add Recommends on xdg-utils, which is used to launch URL handlers
  * Add Recommends on zenity, which Steam assumes is present
  * Add Depends on curl, used to download Steam updates

 -- Simon McVittie <smcv@debian.org>  Mon, 06 Apr 2020 13:04:42 +0100

steam (1.0.0.61-2) unstable; urgency=medium

  * Upload to unstable
  * d/control: Make Homepage more specific
  * Standards-Version: 4.4.0 (no changes required)
  * Use debhelper-compat 12

 -- Simon McVittie <smcv@debian.org>  Tue, 16 Jul 2019 08:50:02 +0100

steam (1.0.0.61-1) experimental; urgency=medium

  * New upstream release
    - Adds udev rules for NVIDIA Shield input hardware
    - d/p/udev-uinput.patch: Drop, applied upstream
    - d/p/udev-permissions.patch: Drop, mostly applied upstream.
      The only remaining differences in our package were:
      + Setting TAG+="uaccess" twice on SteamVR device nodes, which
        we can drop since it's redundant (once is enough)
      + Setting MODE="0660" on /dev/uinput, which is the default anyway

 -- Simon McVittie <smcv@debian.org>  Fri, 21 Jun 2019 13:10:31 +0100

steam (1.0.0.59-4) unstable; urgency=medium

  * Demote steam-devices to a recommendation.

 -- Michael Gilbert <mgilbert@debian.org>  Mon, 04 Feb 2019 02:41:50 +0000

steam (1.0.0.59-3) unstable; urgency=medium

  * Add Conflicts/Replaces on steam-launcher.
    steam-launcher is a Valve-provided package containing the same
    launcher as Debian's steam package, and the same udev rules as
    Debian's steam-devices package. They are not co-installable: please
    install the steam and steam-devices packages from Debian non-free,
    *or* the steam and steam-launcher packages from Valve, but do not
    mix the two sources.
  * steam-devices: Add Breaks/Replaces on non-matching versions of