@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpkg/default.mk
+
 export DH_VERBOSE=1
 
 uversion=$(shell uscan --report --dehs |grep upstream-version | cut -d\< -f2 | cut -d\> -f2)
@@ -21,7 +23,9 @@ override_dh_auto_configure:
 
 # We don't use Valve's build system
 override_dh_auto_build:
-	:
+	sed \
+		-e 's,STEAMSCRIPT_VERSION=.*,STEAMSCRIPT_VERSION='"'"'$(DEB_VERSION_UPSTREAM_REVISION)/$(DEB_VENDOR)'"'"',' \
+		< debian/scripts/steam.in > debian/scripts/steam
 override_dh_auto_install:
 	:
 override_dh_auto_test:
