@@ -70,6 +70,9 @@ steam (1.0.0.62-1) UNRELEASED; urgency=medium
   * Add Recommends on xdg-utils, which is used to launch URL handlers
   * Add Recommends on zenity, which Steam assumes is present
   * Add Depends on curl, used to download Steam updates
+  * d/scripts/steam: Put location and version in environment variables.
+    Recent Steam diagnostic tools use this to identify how Steam was
+    launched.
 
  -- Simon McVittie <smcv@debian.org>  Mon, 06 Apr 2020 13:04:42 +0100
 
